create-vpc.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: A sample template

#Creating The Global Parameters
Parameters:
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - m1.small
      - m1.large
    Description: Enter t2.micro, m1.small, m1.large. Default is t2.micro

  ImageIdParameter:
    Type: String
    Default: ami-a4c7edb2
    Description: Enter the image id
  
  SubnetType:
    Type: String
    Description: Enter the type of subnet i.e. Public
#Conditions Sections
Conditions:
      PublicSubnetCondition: !Equals [ !Ref SubnetType, “Public”]
#Creating all the resources i.e. VPC, Subnets, SecurityGroup, InternetGateway, Route Tables, EC2 Instance
Resources:       
  myVPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 174.0.0.0/16
      EnableDnsHostnames: 'true'
      EnableDnsSupport: 'true'
      InstanceTenancy: default
      Tags: 
        - Key : Name
          Value : My-CFT-VPC

  MYELBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow http to client host
        VpcId:
          Ref: myVPC
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  ApacheSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow http to client host
        VpcId:
          Ref: myVPC
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
  
  DBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow http to client host
        VpcId:
          Ref: myVPC
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0

  publicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: 174.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key : Name
          Value : Public Subnet1

  publicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: 174.0.5.80/28
      MapPublicIpOnLaunch: true
      AvailabilityZone: "us-east-1c"
      Tags:
        - Key : Name
          Value : Public Subnet 2 

  privateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: 174.0.2.0/24
      AvailabilityZone: "us-east-1b"
      Tags:
        - Key : Name
          Value : Private Subnet1

  privateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: myVPC
      CidrBlock: 174.0.6.0/24
      AvailabilityZone: "us-east-1c"
      Tags:
        - Key : Name
          Value : Private Subnet2

  publicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: myVPC
      Tags:
        - Key: Name
          Value: Public RT

  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref publicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref myInternetGateway

  privateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: myVPC
      Tags:
        - Key: Name
          Value: Private RT

  publicRouteTableAssociation1:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId:
          Ref: publicSubnet1
        RouteTableId:
          Ref: publicRouteTable

  publicRouteTableAssociation2:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId:
          Ref: publicSubnet2
        RouteTableId:
          Ref: publicRouteTable
  
  privateRouteTableAssociation1:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId:
          Ref: privateSubnet1
        RouteTableId:
          Ref: privateRouteTable

  privateRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId:
          Ref: privateSubnet2
        RouteTableId:
          Ref: privateRouteTable

  myInternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
        - Key: Name
          Value: my-cft-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: myVPC
      InternetGatewayId:
        Ref: myInternetGateway

  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      SubnetId : 
        Ref: publicSubnet1
      ImageId: ami-0be2609ba883822ec
      InstanceType: t2.micro
      KeyName: aj
      SecurityGroupIds:
        - Ref: ApacheSG
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install httpd php php-mysql -y
          cd /var/www/html
          echo "healthy" > healthy.html
          wget https://wordpress.org/wordpress-5.1.1.tar.gz
          sudo tar -xzf wordpress-5.1.1.tar.gz
          sudo cp -r wordpress/* /var/www/html/
          sudo rm -rf wordpress
          sudo rm -rf wordpress-5.1.1.tar.gz
          sudo chmod 755 -R wp-content/
          sudo chown -R apache:apache wp-content
          sudo chmod 777 -R /var/www/html/
          sudo chkconfig httpd on
          sudo service httpd start
          sudo service httpd restart

  myDBSubnetGroup: 
    Type: AWS::RDS::DBSubnetGroup
    Properties: 
        DBSubnetGroupName: Mydatabasessubnet
        DBSubnetGroupDescription: description
        SubnetIds: 
          - Ref: privateSubnet1
          - Ref: privateSubnet2
        Tags: 
          - 
            Key: Name
            Value: DBSubnetGroup
      
    
  mydatabase:
    Type: AWS::RDS::DBInstance
    Properties: 
      DBInstanceIdentifier: sqldatabase
      DBInstanceClass: db.t2.micro
      AllocatedStorage: 50
      DBName: wordpress
      DBSubnetGroupName:
        Ref: myDBSubnetGroup
      Engine: MySQL
      EngineVersion: 5.7.22
      MasterUsername: admin
      MasterUserPassword: wordpress
      Port: 3306
      PubliclyAccessible: false
      VPCSecurityGroups: 
        - Ref: DBSG
